fix: tasks list overflow

--- a/src/components/Tasks.scss
+++ b/src/components/Tasks.scss
@@ -51,7 +51,7 @@
         }
 
         .tasks-list {
-            overflow-y: scroll;
+            overflow-y: auto;
             margin-top: 28px;
         }
     }
